<?xml version="1.0"?>
<package>
  <name>rocon</name>
  <version>0.7.2</version>
  <description>
    This is a meta package for robotics in concert(a.k.a rocon)
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>

  <license>BSD</license>

  <url type="website">http://www.robotconcert.org/</url>
  <url type="repository">http://www.github.com/robotics-in-concert</url>
  <url type="bugtracker">http://www.github.com/robotics-in-concert/rocon/issues</url>

  <author>Daniel Stonier</author>
  <author>Jihoon Lee</author>
  <author>HyungRyul Kim</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rocon_app_platform</run_depend>
  <run_depend>rocon_concert</run_depend>
  <run_depend>rocon_msgs</run_depend>
  <run_depend>rocon_multimaster</run_depend>
  <run_depend>rocon_qt_gui</run_depend>
  <run_depend>concert_services</run_depend>
  <run_depend>concert_software_farm</run_depend>
  <run_depend>rocon_tools</run_depend>
  <run_depend>rocon_tutorials</run_depend>

  <export>
    <metapackage/>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
